# machine-learning

./: main.py  pyproject.toml
lists/L1/: L1.ipynb
lists/L1/.ipynb_checkpoints/: L1-checkpoint.ipynb
lists/L2/: L2.ipynb
lists/L2/.ipynb_checkpoints/: L2-checkpoint.ipynb
lists/L3/: L3.ipynb
lists/L3/.ipynb_checkpoints/: L3-checkpoint.ipynb
lists/L4/: L4.ipynb  Lista 4 - Aprendizado de maquina.ipynb
lists/L4/.ipynb_checkpoints/: L4-checkpoint.ipynb
lists/L5/: L5.ipynb
lists/L5/.ipynb_checkpoints/: L5-checkpoint.ipynb
optimizers/: gradient_descent.py  ordinary_least_squares.py  stochastic_descent.py
