[project]
name = "machine-learning"
version = "0.1.0"
description = "Classical ML algorithms implemented from scratch"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]
